add advertised.host.name property